// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render component DepartmentCourses within Layout match to snapshot in English 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <nav
      aria-labelledby="kth-local-navigation-title--mobile"
      class="kth-local-navigation--mobile"
    >
      <button
        class="kth-button menu"
        id="kth-local-navigation-title--mobile"
      >
        <span>
          ABE/Architecture
        </span>
      </button>
      <dialog
        class="kth-mobile-menu left"
      >
        <div
          class="kth-mobile-menu__navigation"
        >
          <button
            class="kth-icon-button close"
          >
            <span
              class="kth-visually-hidden"
            >
              Close
            </span>
          </button>
        </div>
        <div
          class="mobile-menu__content"
        >
          <a
            class="kth-button back"
            href="/student/kurser?l=en"
          >
            Course and programme directory
          </a>
          <span>
            ABE/Architecture
          </span>
          <ul>
            <li>
              <a
                aria-current="page"
              >
                Courses
              </a>
            </li>
          </ul>
        </div>
      </dialog>
    </nav>
    <nav
      aria-labelledby="local-navigation-title"
      class="kth-local-navigation col"
      id="mainMenu"
    >
      <a
        class="kth-button back"
        href="/student/kurser?l=en"
      >
        Course and programme directory
      </a>
      <h2
        id="local-navigation-title"
      >
        ABE/Architecture
      </h2>
      <ul>
        <li>
          <a
            aria-current="page"
          >
            Courses
          </a>
        </li>
      </ul>
    </nav>
    <main
      class="col"
      id="mainContent"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <header
            role="presentation"
          >
            <h1
              aria-labelledby="page-heading page-sub-heading"
              id="page-heading"
            >
              Courses
            </h1>
            <p
              aria-hidden="true"
              class="page-sub-heading"
              id="page-sub-heading"
            >
              ABE/Architecture
            </p>
          </header>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <article
            class="article "
          >
            <table
              class="table table-responsive"
            >
              <thead>
                <tr>
                  <th
                    style="cursor: pointer; user-select: none;"
                  >
                    Course code
                    <span
                      aria-hidden="true"
                      style="opacity: 0; margin-left: .25em;"
                    >
                      ▼
                    </span>
                  </th>
                  <th
                    style="cursor: pointer; user-select: none;"
                  >
                    Course name
                    <span
                      aria-hidden="true"
                      style="opacity: 0; margin-left: .25em;"
                    >
                      ▼
                    </span>
                  </th>
                  <th
                    style="cursor: pointer; user-select: none;"
                  >
                    Scope
                    <span
                      aria-hidden="true"
                      style="opacity: 0; margin-left: .25em;"
                    >
                      ▼
                    </span>
                  </th>
                  <th
                    style="cursor: pointer; user-select: none;"
                  >
                    Educational level
                    <span
                      aria-hidden="true"
                      style="opacity: 0; margin-left: .25em;"
                    >
                      ▼
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    <a
                      href="/student/kurser/kurs/AD12DA?l=en"
                    >
                      AD12DA
                    </a>
                  </td>
                  <td>
                    <a
                      href="/student/kurser/kurs/AD12DA?l=en"
                    >
                      2DAutoCAD Focus on the Drawing as a Communicative Tool
                    </a>
                  </td>
                  <td>
                    6.0 hp
                  </td>
                  <td>
                    First cycle
                  </td>
                </tr>
              </tbody>
            </table>
          </article>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <footer
            class="border-top mt-4 pt-1"
            id="articleFooter"
          >
            <address>
              Contact for questions regarding education at KTH: 
              <a
                href="https://www.kth.se/en/studies/master/general-study-counselling-1.621634"
              >
                Central study counseling
              </a>
              <br />
              Contact regarding technical matters on this page: 
              <a
                href="mailto:kopps@kth.se"
              >
                kopps@kth.se
              </a>
            </address>
          </footer>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`Render component DepartmentCourses within Layout match to snapshot in Swedish 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <nav
      aria-labelledby="kth-local-navigation-title--mobile"
      class="kth-local-navigation--mobile"
    >
      <button
        class="kth-button menu"
        id="kth-local-navigation-title--mobile"
      >
        <span>
          ABE/Arkitektur, Fex övr utbildning
        </span>
      </button>
      <dialog
        class="kth-mobile-menu left"
      >
        <div
          class="kth-mobile-menu__navigation"
        >
          <button
            class="kth-icon-button close"
          >
            <span
              class="kth-visually-hidden"
            >
              Close
            </span>
          </button>
        </div>
        <div
          class="mobile-menu__content"
        >
          <a
            class="kth-button back"
            href="/student/kurser"
          >
            Kurs- och programkatalogen
          </a>
          <span>
            ABE/Arkitektur, Fex övr utbildning
          </span>
          <ul>
            <li>
              <a
                aria-current="page"
              >
                Kurser
              </a>
            </li>
          </ul>
        </div>
      </dialog>
    </nav>
    <nav
      aria-labelledby="local-navigation-title"
      class="kth-local-navigation col"
      id="mainMenu"
    >
      <a
        class="kth-button back"
        href="/student/kurser"
      >
        Kurs- och programkatalogen
      </a>
      <h2
        id="local-navigation-title"
      >
        ABE/Arkitektur, Fex övr utbildning
      </h2>
      <ul>
        <li>
          <a
            aria-current="page"
          >
            Kurser
          </a>
        </li>
      </ul>
    </nav>
    <main
      class="col"
      id="mainContent"
    >
      <div
        class="row"
      >
        <div
          class="col"
        >
          <header
            role="presentation"
          >
            <h1
              aria-labelledby="page-heading page-sub-heading"
              id="page-heading"
            >
              Kurser
            </h1>
            <p
              aria-hidden="true"
              class="page-sub-heading"
              id="page-sub-heading"
            >
              ABE/Arkitektur, Fex övr utbildning
            </p>
          </header>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <article
            class="article "
          >
            <table
              class="table table-responsive"
            >
              <thead>
                <tr>
                  <th
                    style="cursor: pointer; user-select: none;"
                  >
                    Kurskod
                    <span
                      aria-hidden="true"
                      style="opacity: 0; margin-left: .25em;"
                    >
                      ▼
                    </span>
                  </th>
                  <th
                    style="cursor: pointer; user-select: none;"
                  >
                    Kursnamn
                    <span
                      aria-hidden="true"
                      style="opacity: 0; margin-left: .25em;"
                    >
                      ▼
                    </span>
                  </th>
                  <th
                    style="cursor: pointer; user-select: none;"
                  >
                    Omfattning
                    <span
                      aria-hidden="true"
                      style="opacity: 0; margin-left: .25em;"
                    >
                      ▼
                    </span>
                  </th>
                  <th
                    style="cursor: pointer; user-select: none;"
                  >
                    Utbildningsnivå
                    <span
                      aria-hidden="true"
                      style="opacity: 0; margin-left: .25em;"
                    >
                      ▼
                    </span>
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    <a
                      href="/student/kurser/kurs/AD12DA"
                    >
                      AD12DA
                    </a>
                  </td>
                  <td>
                    <a
                      href="/student/kurser/kurs/AD12DA"
                    >
                      2DAutoCAD Fokus på ritningen som kommunikationsredskap
                    </a>
                  </td>
                  <td>
                    6,0 hp
                  </td>
                  <td>
                    Grundnivå
                  </td>
                </tr>
              </tbody>
            </table>
          </article>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col"
        >
          <footer
            class="border-top mt-4 pt-1"
            id="articleFooter"
          >
            <address>
              Kontakt för frågor om utbildning på KTH: 
              <a
                href="https://www.kth.se/studievagledning"
              >
                Central studievägledning
              </a>
              <br />
              Teknisk kontakt om denna sida: 
              <a
                href="mailto:kopps@kth.se"
              >
                kopps@kth.se
              </a>
            </address>
          </footer>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;
